more bar refactoring

--- a/src/views/forum.twig
+++ b/src/views/forum.twig
@@ -41,12 +41,14 @@
 											<ul class="o-bar-left">
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg> {{ item.topics }}
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg>
+														<span class="o-bar-item-text">{{ item.topics }}</span>
 													</span>
 												</li>
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg> {{ item.posts }}
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg>
+														<span class="o-bar-item-text">{{ item.posts }}</span>
 													</span>
 												</li>
 											</ul>
