--- a/src/views/includes/imageset.twig
+++ b/src/views/includes/imageset.twig
@@ -1163,12 +1163,14 @@
 											<ul class="o-bar-left">
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg> 43
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg>
+														<span class="o-bar-item-text">43</span>
 													</span>
 												</li>
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg> 196
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg>
+														<span class="o-bar-item-text">196</span>
 													</span>
 												</li>
 											</ul>
@@ -1224,12 +1226,14 @@
 											<ul class="o-bar-left">
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg> 0
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg>
+														<span class="o-bar-item-text">0</span>
 													</span>
 												</li>
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg> 0
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg>
+														<span class="o-bar-item-text">0</span>
 													</span>
 												</li>
 											</ul>
@@ -1271,12 +1275,14 @@
 											<ul class="o-bar-left">
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg> 0
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg>
+														<span class="o-bar-item-text">0</span>
 													</span>
 												</li>
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg> 0
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg>
+														<span class="o-bar-item-text">0</span>
 													</span>
 												</li>
 											</ul>
@@ -1444,12 +1450,14 @@
 											<ul class="o-bar-left">
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg> 0
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg>
+														<span class="o-bar-item-text">0</span>
 													</span>
 												</li>
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg> 0
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg>
+														<span class="o-bar-item-text">0</span>
 													</span>
 												</li>
 											</ul>
@@ -1541,12 +1549,14 @@
 											<ul class="o-bar-left">
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg> 2
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg>
+														<span class="o-bar-item-text">2</span>
 													</span>
 												</li>
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg> 2
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg>
+														<span class="o-bar-item-text">2</span>
 													</span>
 												</li>
 											</ul>
@@ -1594,12 +1604,14 @@
 											<ul class="o-bar-left">
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg> 0
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg>
+														<span class="o-bar-item-text">0</span>
 													</span>
 												</li>
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg> 0
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg>
+														<span class="o-bar-item-text">0</span>
 													</span>
 												</li>
 											</ul>
@@ -1641,12 +1653,14 @@
 											<ul class="o-bar-left">
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg> 1
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg>
+														<span class="o-bar-item-text">1</span>
 													</span>
 												</li>
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg> 1
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg>
+														<span class="o-bar-item-text">1</span>
 													</span>
 												</li>
 											</ul>
@@ -1796,12 +1810,14 @@
 											<ul class="o-bar-left">
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg> 1
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg>
+														<span class="o-bar-item-text">1</span>
 													</span>
 												</li>
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg> 1
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg>
+														<span class="o-bar-item-text">1</span>
 													</span>
 												</li>
 											</ul>
@@ -1849,12 +1865,14 @@
 											<ul class="o-bar-left">
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg> 1
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg>
+														<span class="o-bar-item-text">1</span>
 													</span>
 												</li>
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg> 1
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg>
+														<span class="o-bar-item-text">1</span>
 													</span>
 												</li>
 											</ul>
@@ -1902,12 +1920,14 @@
 											<ul class="o-bar-left">
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg> 1
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg>
+														<span class="o-bar-item-text">1</span>
 													</span>
 												</li>
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg> 1
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg>
+														<span class="o-bar-item-text">1</span>
 													</span>
 												</li>
 											</ul>
@@ -1992,12 +2012,14 @@
 											<ul class="o-bar-left">
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg> 0
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg>
+														<span class="o-bar-item-text">0</span>
 													</span>
 												</li>
 												<li class="o-bar-item">
 													<span class="o-bar-info">
-														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg> 0
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg>
+														<span class="o-bar-item-text">0</span>
 													</span>
 												</li>
 											</ul>
