--- a/src/scss/components/_profile.scss
+++ b/src/scss/components/_profile.scss
@@ -13,6 +13,7 @@ $profile-spacing: 16px !default;
 $profile-width: 336px !default;
 $profile-group-height: 36px !default;
 $profile-border-radius: $default-border-radius !default;
+$profile-opacity-38: $default-opacity-38 !default;
 
 
 // Theme Variables
@@ -46,11 +47,12 @@ $profile-bad-color: $default-important-color !default;
 	&-user {
 		&-title {
 			color: $profile-user-title-color;
-			opacity: 0.38;
+			opacity: $profile-opacity-38;
 		}
 
 		&:hover {
 			text-decoration: underline;
+			transition: 0.5s;
 		}
 	}
 
@@ -70,6 +72,7 @@ $profile-bad-color: $default-important-color !default;
 		&:hover,
 		&:focus {
 			color: $profile-action-color-hover;
+			transition: 0.5s;
 		}
 	}
 
@@ -81,6 +84,7 @@ $profile-bad-color: $default-important-color !default;
 		&:hover,
 		&:focus {
 			color: $profile-action-color-hover;
+			transition: 0.5s;
 		}
 	}
 
