--- a/src/scss/components/_drawer.scss
+++ b/src/scss/components/_drawer.scss
@@ -91,23 +91,16 @@ $drawer-border: $drawer-border-height $drawer-border-type $drawer-border-color !
 	}
 
 	&-menu {
-		display: none;
 		margin: 0;
 		padding: 0;
-
-		&:hover > .c-drawer-menu,
-		&:focus > .c-drawer-menu {
-			display: block;
-			transition: 0.5s;
-		}
+		transform: scaleY(0);
 	}
 
-	&-item:hover,
-	&-item:focus {
-		> .c-drawer-menu,
-		> .c-drawer-menu {
-			display: block;
-			transition: 0.5s;
+	&-item {
+		&.is-active > .c-drawer-menu {
+			transition: 0.35s ease;
+			transform: scaleY(1);
+			transform-origin: center top;
 		}
 	}
 
