--- a/src/scss/components/_tab.scss
+++ b/src/scss/components/_tab.scss
@@ -10,9 +10,12 @@
 
 // Layout Variables
 $tab-spacing: 16px !default;
-$tab-width: 248px !default;
+$tab-height: 72px !default;
+$tab-width: 160px !default;
 $tab-border-radius: $default-border-radius !default;
 $tab-border-height: 1px !default;
+$tab-icon-size: 24px !default;
+$tab-icon-margin-top: 4px !default;
 
 
 // Theme Variables
@@ -30,13 +33,20 @@ $tab-border: $tab-border-height $tab-border-type $tab-border-color !default;
 //
 // @scss
 .c-tab {
+	@include type(body2);
 	text-align: center;
+	vertical-align: middle;
+	white-space: nowrap;
 	text-transform: uppercase;
 	background-color: transparent;
 	color: $tab-text-color;
 	position: relative;
+	display: table-cell;
+	overflow: hidden;
+	min-width: $tab-width;
+	height: $tab-height;
 	margin: 0 $tab-border-height;
-	padding: $tab-spacing;
+	padding: 0 ($tab-spacing * 1.5);;
 	transition: color 0.25s;
 
 	&:after {
@@ -66,12 +76,10 @@ $tab-border: $tab-border-height $tab-border-type $tab-border-color !default;
 	&-icon {
 		text-align: center;
 		display: block;
+		width: $tab-icon-size;
+		height: $tab-icon-size;
 		margin: 0 auto;
-	}
-
-	&-text {
-		@include type(body2);
-		display: block;
+		margin-top: $tab-icon-margin-top;
 	}
 
 	&-icon + &-text {
@@ -79,21 +87,32 @@ $tab-border: $tab-border-height $tab-border-type $tab-border-color !default;
 	}
 
 	&-card {
+		@include shadow(2);
 		background-color: $tab-pane-bg-color;
 		border-radius: $tab-border-radius;
-		@include shadow(2);
 	}
 
 	&-bar {
-		border-bottom: $tab-border;
-		padding: 0 ($tab-spacing * 0.75);
-		@media (min-width: $bp-lg) {
-			padding: 0 ($tab-spacing * 1.5);
+		border-bottom: 0;
+		position: relative;
+		display: table;
+
+		&-frame {
+			@include parent();
+			@include child();
+			border-bottom: $tab-border;
+			position: relative;
+			overflow-x: scroll;
+			justify-content: flex-start;
+
+			&::-webkit-scrollbar {
+				display: none;
+			}
 		}
-		@include parent();
 	}
 
 	&-pane {
+		@include parent(column);
 		margin: 0;
 
 		&[aria-hidden="true"] {
@@ -101,11 +120,11 @@ $tab-border: $tab-border-height $tab-border-type $tab-border-color !default;
 		}
 
 		&-row {
+			@include child();
+			@include parent(column);
 			@media (min-width: $bp-lg) {
 				flex-direction: row;
 			}
-			@include child();
-			@include parent(column);
 		}
 
 		&-title {
@@ -119,8 +138,8 @@ $tab-border: $tab-border-height $tab-border-type $tab-border-color !default;
 		}
 
 		&-text {
-			padding: $tab-spacing;
 			@include child();
+			padding: $tab-spacing;
 		}
 
 		&-link:hover {
@@ -133,14 +152,10 @@ $tab-border: $tab-border-height $tab-border-type $tab-border-color !default;
 		}
 
 		&-footer {
-			background-color: $tab-bg-color;
-			border-top: $tab-border;
 			@include parent();
 			@include border-radius(bottom, $tab-border-radius);
+			background-color: $tab-bg-color;
+			border-top: $tab-border;
 		}
-		@include parent(column);
-	}
-	@media (min-width: $bp-lg) {
-		padding: $tab-spacing ($tab-spacing * 1.5);
 	}
 }
