--- a/src/scss/components/_topic.scss
+++ b/src/scss/components/_topic.scss
@@ -117,6 +117,11 @@ $topic-border-color: rgba(0, 0, 0, 0.125) !default;
 				text-decoration: underline;
 				transition: 0.5s;
 			}
+
+			&-unapproved {
+				color: $default-secondary-color;
+				padding: 0;
+			}
 		}
 	}
 
@@ -129,9 +134,13 @@ $topic-border-color: rgba(0, 0, 0, 0.125) !default;
 			@include type(body2, $lh: unitless($topic-subheader-line-height, map-get(map-get($type-styles, title), font-size)));
 			text-align: right;
 			vertical-align: middle;
-			display: inline-block;
+			display: none;
 			align-self: center;
 			padding: 0 $topic-spacing;
+
+			@media (min-width: $bp-md) {
+				display: inline-block;
+			}
 		}
 
 		&-date {
