--- a/src/views/includes/imageset.twig
+++ b/src/views/includes/imageset.twig
@@ -1149,7 +1149,10 @@
 											</div>
 											<div class="c-forum-info t-forum-info">
 												<h4 class="c-forum-title t-forum-title">
-													<a class="c-forum-title-link t-forum-title-link" href="#">Your first forum</a>
+													<a class="c-forum-title-link t-forum-title-link" href="#">
+														
+														Your first forum
+													</a>
 												</h4>
 												
 													<p class="c-forum-text t-forum-text">
@@ -1212,7 +1215,10 @@
 											</div>
 											<div class="c-forum-info t-forum-info">
 												<h4 class="c-forum-title t-forum-title">
-													<a class="c-forum-title-link t-forum-title-link" href="#">General Announcements</a>
+													<a class="c-forum-title-link t-forum-title-link" href="#">
+														
+														General Announcements
+													</a>
 												</h4>
 												
 													<p class="c-forum-text t-forum-text">
@@ -1261,7 +1267,10 @@
 											</div>
 											<div class="c-forum-info t-forum-info">
 												<h4 class="c-forum-title t-forum-title">
-													<a class="c-forum-title-link t-forum-title-link" href="#">Site Announcements</a>
+													<a class="c-forum-title-link t-forum-title-link" href="#">
+														
+														Site Announcements
+													</a>
 												</h4>
 												
 													<p class="c-forum-text t-forum-text">
@@ -1436,7 +1445,10 @@
 											</div>
 											<div class="c-forum-info t-forum-info">
 												<h4 class="c-forum-title t-forum-title">
-													<a class="c-forum-title-link t-forum-title-link" href="#">MOD specific announcments</a>
+													<a class="c-forum-title-link t-forum-title-link" href="#">
+														
+														MOD specific announcments
+													</a>
 												</h4>
 												
 													<p class="c-forum-text t-forum-text">
@@ -1539,7 +1551,10 @@
 											</div>
 											<div class="c-forum-info t-forum-info">
 												<h4 class="c-forum-title t-forum-title">
-													<a class="c-forum-title-link t-forum-title-link" href="#">Chit Chat</a>
+													<a class="c-forum-title-link t-forum-title-link" href="#">
+														
+														Chit Chat
+													</a>
 												</h4>
 												
 											</div>
@@ -1590,7 +1605,10 @@
 											</div>
 											<div class="c-forum-info t-forum-info">
 												<h4 class="c-forum-title t-forum-title">
-													<a class="c-forum-title-link t-forum-title-link" href="#">Cars</a>
+													<a class="c-forum-title-link t-forum-title-link" href="#">
+														
+														Cars
+													</a>
 												</h4>
 												
 													<p class="c-forum-text t-forum-text">
@@ -1639,7 +1657,10 @@
 											</div>
 											<div class="c-forum-info t-forum-info">
 												<h4 class="c-forum-title t-forum-title">
-													<a class="c-forum-title-link t-forum-title-link" href="#">Photography</a>
+													<a class="c-forum-title-link t-forum-title-link" href="#">
+														
+														Photography
+													</a>
 												</h4>
 												
 													<p class="c-forum-text t-forum-text">
@@ -1796,7 +1817,10 @@
 											</div>
 											<div class="c-forum-info t-forum-info">
 												<h4 class="c-forum-title t-forum-title">
-													<a class="c-forum-title-link t-forum-title-link" href="#">Site Support</a>
+													<a class="c-forum-title-link t-forum-title-link" href="#">
+														
+														Site Support
+													</a>
 												</h4>
 												
 													<p class="c-forum-text t-forum-text">
@@ -1851,7 +1875,10 @@
 											</div>
 											<div class="c-forum-info t-forum-info">
 												<h4 class="c-forum-title t-forum-title">
-													<a class="c-forum-title-link t-forum-title-link" href="#">Forum Support</a>
+													<a class="c-forum-title-link t-forum-title-link" href="#">
+														
+														Forum Support
+													</a>
 												</h4>
 												
 													<p class="c-forum-text t-forum-text">
@@ -1906,7 +1933,10 @@
 											</div>
 											<div class="c-forum-info t-forum-info">
 												<h4 class="c-forum-title t-forum-title">
-													<a class="c-forum-title-link t-forum-title-link" href="#">MOD Support</a>
+													<a class="c-forum-title-link t-forum-title-link" href="#">
+														
+														MOD Support
+													</a>
 												</h4>
 												
 													<p class="c-forum-text t-forum-text">
@@ -2002,7 +2032,10 @@
 											</div>
 											<div class="c-forum-info t-forum-info">
 												<h4 class="c-forum-title t-forum-title">
-													<a class="c-forum-title-link t-forum-title-link" href="#">link</a>
+													<a class="c-forum-title-link t-forum-title-link" href="#">
+														
+														link
+													</a>
 												</h4>
 												
 											</div>
