--- a/src/scss/components/_topic.scss
+++ b/src/scss/components/_topic.scss
@@ -205,4 +205,9 @@ $topic-border-color: rgba(0, 0, 0, 0.125) !default;
 			display: inline-flex;
 		}
 	}
+
+	&-checkbox-label {
+		text-indent: 9999px;
+		width: 0;
+	}
 }
