--- a/src/views/topic.twig
+++ b/src/views/topic.twig
@@ -2,7 +2,7 @@
 {% extends "./layout/layout.twig" %}
 
 {% block component %}
-				<ul class="c-topic">
+				<ul class="o-list c-topic">
 					<li class="c-topic-header">
 						<div class="o-bar">
 							<ul class="o-bar-left">
@@ -20,12 +20,12 @@
 						</div>
 					</li>
 				{% for topic in topics %}
-				{% if topic.type === "announce" %}
-					{% include './includes/topic-item.twig' %}
-				{% endif %}
+					{% if topic.type === "announce" %}
+						{% include './includes/topic-item.twig' %}
+					{% endif %}
 				{% endfor %}
 				</ul>
-				<ul class="c-topic">
+				<ul class="o-list c-topic">
 					<li class="c-topic-header">
 						<div class="o-bar">
 							<ul class="o-bar-left">
@@ -43,14 +43,14 @@
 						</div>
 					</li>
 					{% for topic in topics %}
-					{% if topic.type === "sticky" %}
-						{% include './includes/topic-item.twig' %}
-					{% endif %}
+						{% if topic.type === "sticky" %}
+							{% include './includes/topic-item.twig' %}
+						{% endif %}
 					{% endfor %}
 					{% for topic in topics %}
-					{% if topic.type === "topic" %}
-						{% include './includes/topic-item.twig' %}
-					{% endif %}
+						{% if topic.type === "topic" %}
+							{% include './includes/topic-item.twig' %}
+						{% endif %}
 					{% endfor %}
 				</ul>
 {% endblock %}
