--- a/src/scss/components/_topic.scss
+++ b/src/scss/components/_topic.scss
@@ -10,24 +10,13 @@
 
 // Layout Variables
 $topic-spacing: 16px !default;
-$topic-border-radius: $default-border-radius !default;
-$topic-height: 72px !default;
-$topic-icon-size: 40px !default;
-$topic-avatar-size: 40px !default;
-$topic-margin-bottom: 24px !default;
-$topic-title-line-height: 20px !default;
-$topic-subheader-line-height: 18px !default;
 $topic-data-icon-size: 18px !default;
-$topic-border-style: solid !default;
+$topic-margin-bottom: 24px !default;
 
 // Theme Variables
 $topic-icon-color: $default-secondary-color !default;
 $topic-icon-color-read: $default-primary-color !default;
 $topic-hover-color: $gray-50 !default;
-$topic-action-hover-color: $default-action-bg-hover !default;
-$topic-action-icon-color: $default-action-color !default;
-$topic-action-hover-icon-color: $default-action-color-hover !default;
-$topic-header-color: $default-action-bg !default;
 $topic-border-color: rgba(0, 0, 0, 0.125) !default;
 
 
@@ -49,6 +38,14 @@ $topic-border-color: rgba(0, 0, 0, 0.125) !default;
 		position: relative;
 		justify-content: flex-start;
 		align-items: center;
+	}
+
+	&-unread {
+		color: $topic-icon-color;
+	}
+
+	&-read {
+		color: $topic-icon-color-read;
 	}
 
 	&-unapproved {
