--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -96,6 +96,7 @@
 @import "components/post";
 @import "components/profile";
 @import "components/menu";
+@import "components/notification";
 @import "components/drawer";
 @import "components/tab";
 @import "components/stat";
